--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -51,7 +51,7 @@
                 class="form-control ps-3"
                 name="Email ID"
                 id="Email ID"
-                placeholder="tushar@builint.com"
+                placeholder="pickmyday@*****.com"
                 required
               />
             </div>
@@ -75,7 +75,7 @@
             </div>
 
             <div>
-              <a routerLink="/header"
+              <a routerLink="/main"
                 ><button class="btn btn-success w-100" type="button">
                   Login
                 </button></a
