--- a/src/app/pages/movies/movie-model/movie-model.component.html
+++ b/src/app/pages/movies/movie-model/movie-model.component.html
@@ -1,11 +1,13 @@
 <div class="d-flex justify-content-center align-items-center" style="height: 630px;">
     <div class="done-popup p-5 d-flex flex-column" style="border: 1px solid gray; text-align: center;">
         <div>
-       <input type="date" class="fs-4">
-    </div>
-    <div>
-       <button class="btn bg-success fs-6 mt-5 d-flex justify-content-end" routerLink="/theatre-list">submit</button>
-    </div>
+            <h5 class="mb-3">When your are going to make fun</h5>
+            <input type="date" class="fs-4">
+        </div>
+        <div>
+            <button class="btn bg-success fs-6 mt-5 text-white"
+                routerLink="/theatre-list">submit</button>
+        </div>
 
     </div>
 </div>
