--- a/src/app/pages/movies/theatre-list/theatre-list.component.html
+++ b/src/app/pages/movies/theatre-list/theatre-list.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid p-3">
     <h3 class="pt-4">Godzilla x Kong: The New Empire (3D Tamil) - Tamil</h3>
     <hr>
-    <div class="d-flex justify-content-end mb-3">
+    <!-- <div class="d-flex justify-content-end mb-3">
         <h6 class="pe-2 pt-1" style="color: green;">Select Booking Day</h6>
         <input type="date">
-    </div>
+    </div> -->
 
     <h5>AGS Cinemas OMR: Navlur</h5>
     <div class="d-flex pt-2">
