--- a/src/app/pages/sports/sports-pay-done/sports-pay-done.component.html
+++ b/src/app/pages/sports/sports-pay-done/sports-pay-done.component.html
@@ -6,6 +6,7 @@
        <div>
         <p class="fs-5 text-success"> payment done</p>
         <p class="fs-5">Your Ticket is Booked Successfully</p>
+        <button class="rounded p-2" routerLink="/" style="color: white ;background-color: red; border: none;">okay</button>
        
        </div>
 
