--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -59,42 +59,42 @@
                 <h6 class="pe-2 pt-1">Select Date</h6>
                 <input type="date">
             </div>
-            <div class="sports-list_button mb-3">
+            <div class="sports-list_button mb-3" (click)="toggleButtonState()">
                 <button class="btn me-3">Box-Cricket</button>
                 <button class="btn me-3">Badminton</button>
                 <button class="btn me-3">Foodball</button>
                 <button class="btn me-3">Vollyball</button>
                 <button class="btn me-3">Tennis</button>
             </div>
-            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between"
+            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between" *ngIf="isButtonSelected"
                 style="border: 1px solid rgb(200, 200, 200); background-color: white;">
                 <div class="ps-2 pt-2">17:00 - 18:00 <span class="ps-4"> ₹1,000</span></div>
                 <div>
                     <button class="btn sports-add" style="background-color: red; color: white;">+ Add</button>
                 </div>
             </div>
-            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between"
+            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between" *ngIf="isButtonSelected"
                 style="border: 1px solid rgb(200, 200, 200); background-color: white;">
                 <div class="ps-2 pt-2">18:00 - 19:00 <span class="ps-4"> ₹1,000</span></div>
                 <div>
                     <button class="btn" style="background-color: red; color: white;">+ Add</button>
                 </div>
             </div>
-            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between"
+            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between" *ngIf="isButtonSelected"
                 style="border: 1px solid rgb(200, 200, 200); background-color: white;">
                 <div class="ps-2 pt-2">19:00 - 20:00 <span class="ps-4"> ₹1,000</span></div>
                 <div>
                     <button class="btn" style="background-color: red; color: white;">+ Add</button>
                 </div>
             </div>
-            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between"
+            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between" *ngIf="isButtonSelected"
                 style="border: 1px solid rgb(200, 200, 200); background-color: white;">
                 <div class="ps-2 pt-2">20:00 - 21:00 <span class="ps-4"> ₹1,000</span></div>
                 <div>
                     <button class="btn" style="background-color: red; color: white;">+ Add</button>
                 </div>
             </div>
-            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between"
+            <div class="col-12 mt-3 rounded-1 p-2 d-flex justify-content-between" *ngIf="isButtonSelected"
                 style="border: 1px solid rgb(200, 200, 200); background-color: white;">
                 <div class="ps-2 pt-2">21:00 - 22:00 <span class="ps-4"> ₹1,000</span></div>
                 <div>
@@ -102,8 +102,8 @@
                 </div>
             </div>
             
-            <div class="d-flex justify-content-center pt-5">
-                <button class="movie-pay btn" routerLink="/sports-pay-done">Pay Rs.220.00</button>
+            <div class="d-flex justify-content-center pt-5"  *ngIf="isButtonSelected">
+                <button class="movie-pay btn" routerLink="/sports-pay-done">Pay Rs.1000.00</button>
             </div>
         </div>
     </div>
