--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,20 +1,20 @@
-
 <div class="container-fluid mainheader">
     <div class="d-flex justify-content-between">
         <div>
             <h5 class="pt-2 ps-3 logo">Pick My Day</h5>
         </div>
         <div class="d-flex align-items-center pe-5">
-            <ul class="d-flex gap-5 pt-2">
-                <li routerLink="/main">Home</li>
-                <li routerLink="/movies">Movies</li>
-                <li routerLink="/travel">Travel</li>
-                <li routerLink="/sports">Sports</li>
-                <li routerLink="/logout">Logout</li>
+            <ul class="d-flex gap-5 pt-2 lili">
+                <li routerLink="/main" routerLinkActive="active">Home</li>
+                <li routerLink="/movies" routerLinkActive="active">Movies</li>
+                <li routerLink="/travel" routerLinkActive="active">Travel</li>
+                <li routerLink="/sports" routerLinkActive="active">Sports</li>
+                <li routerLink="/logout" routerLinkActive="active">Logout</li>
             </ul>
         </div>
     </div>
 </div>
+
 <!-- <div class="bg-text">
     <img src="/assets/images/person.png" class="rounded-circle img-fluid" width="200">
     <h4 class="text-decoration-dash">welcome</h4>
