--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -16,9 +16,9 @@
                         tv_signin
                     </span>
                 </div>
-                <div>
+                <div class="">
                     <h6 class="text-center">Welcome back !</h6>
-                    <h4 class="text-center">Ranjith Kumar</h4>
+                    <h4 class="text-center" style="color: blue;">Ranjith Kumar</h4>
                 </div>
             </div>
             <div class="col-5 p-3 main-recent">
